--- a/app.css
+++ b/app.css
@@ -12,6 +12,21 @@
   background-size:cover;
 }
 
+#informationPanel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30%;
+  width: 30%;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+}
+
+.visible{
+
+}
+
 html {
 height: 100%;
 }
