--- a/app.css
+++ b/app.css
@@ -8,11 +8,10 @@
   overflow: hidden;
   padding: 0;
   font-family: sans-serif;
-  background:#000 url(stars.jpg);
-  background-size:cover;
+  
 }
 
-#informationPanel {
+#contentPanel {
   position: absolute;
   top: 0;
   left: 0;
@@ -21,6 +20,19 @@
   margin: 0;
   overflow: hidden;
   padding: 0;
+  
+  z-index: 65;
+}
+
+#informationPanel {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  color:white;
+  z-index: 65;
 }
 
 
